--- a/Pipfile
+++ b/Pipfile
@@ -3,17 +3,22 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+refinance = "refinance.__main__:main"
+
 [packages]
-fastapi = "*"
-uvicorn = "*"
-sqlalchemy = "*"
+fastapi = "0.110.1"
+pydantic-settings = "2.2.1"
+uvicorn = "0.29"
+sqlalchemy = "2.0.15"
 
 [dev-packages]
-mypy = "*"
-black = "*"
-isort = "*"
-pytest = "*"
-httpx = "*"
+mypy = "1.9.0"
+black = "24.3.0"
+isort = "5.13.2"
+pytest = "8.1.1"
+pytest-cov = "5.0.0"
+httpx = "0.27.0"
 
 [requires]
 python_version = "3.11"
