add token auth for endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "8000:8000"
     volumes:
       - refinance-api-data:/opt/data
+    env_file:
+      - secrets.env
 
 volumes:
   refinance-api-data:
