--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,20 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0  # Ensures git history and tags are fully fetched
-
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.12' 
-
-    - name: Install dependencies
-      run: |
-        pip install pipenv
-        pipenv install --dev
-
-    - name: Run tests
-      run: |
-        pipenv run pytest
+      - uses: actions/checkout@v3
+      - uses: adambirds/docker-compose-action@v1.3.0
+        with:
+          compose-file: "./docker-compose.yml"
+          down-flags: "--volumes"
+          test-container: refinance-ui
+          test-command: "pytest"
