--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -10,9 +10,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: adambirds/docker-compose-action@v1.3.0
-        with:
-          compose-file: "./docker-compose.yml"
-          down-flags: "--volumes"
-          test-container: refinance-ui
-          test-command: "pytest"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and Run Docker Compose
+        run: |
+          docker compose up --build -d
+      - name: Run pytest
+        run: |
+          docker compose exec refinance-api pytest -v
+      - name: Stop and remove containers
+        run: |
+          docker compose down
