--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,7 +17,7 @@ jobs:
           docker compose up --build -d
       - name: Run pytest
         run: |
-          docker compose exec refinance-api pytest -v
+          docker compose exec api pytest -v
       - name: Stop and remove containers
         run: |
           docker compose down
