--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.4.0
 black==24.4.2
 certifi==2024.7.4
 click==8.1.7
+flaky==3.8.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -16,7 +17,7 @@ pathspec==0.12.1
 platformdirs==4.2.2
 pluggy==1.5.0
 pytest==8.2.2
-ruff==0.5.1
+ruff==0.5.2
 sniffio==1.3.1
 typing-extensions==4.12.2
 annotated-types==0.7.0
@@ -24,7 +25,7 @@ blinker==1.8.2
 charset-normalizer==3.3.2
 dnspython==2.6.1
 email-validator==2.2.0
-fastapi==0.111.0
+fastapi==0.111.1
 fastapi-cli==0.0.4
 flask==3.0.3
 flask-cors==4.0.1
@@ -37,7 +38,6 @@ jinja2==3.1.4
 markdown-it-py==3.0.0
 markupsafe==2.1.5
 mdurl==0.1.2
-orjson==3.10.6
 pydantic==2.8.2
 pydantic-core==2.20.1
 pygments==2.18.0
@@ -51,7 +51,6 @@ shellingham==1.5.4
 sqlalchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
-ujson==5.10.0
 urllib3==2.2.2
 uvicorn[standard]==0.30.1
 uvloop==0.19.0
