--- a/secrets.env.example
+++ b/secrets.env.example
@@ -1,2 +1,5 @@
+# any string to be used as a secret key to sign x-token
 export REFINANCE_SECRET_KEY=0000-1111-2222-3333-4444-5555
+
+# telegram bot that will send users a link to login
 export REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
