send link with token instead of just token

--- a/secrets.env.example
+++ b/secrets.env.example
@@ -2,4 +2,7 @@
 export REFINANCE_SECRET_KEY=0000-1111-2222-3333-4444-5555
 
 # telegram bot that will send users a link to login
-export REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
+export REFINANCE_TELEGRAM_BOT_API_TOKEN=354970792:AAEWmFZOpX-X9Y7BPwf3gLGuC2F7LBdhaeE
+
+# web ui url
+export REFINANCE_UI_URL=http://0.0.0.0:9000
