--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     volumes:
       - api-data:/opt/data
     env_file:
-      - secrets.env.example
+      - secrets.env
 
   ui:
     build: ui
     ports:
       - "9000:9000"
     env_file:
-      - secrets.env.example
+      - secrets.env
 
 volumes:
   api-data:
