--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /opt/api
 RUN pip install -r requirements.txt
 
 EXPOSE 8000
-ENTRYPOINT ["uvicorn", "app.app:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["uvicorn", "app.app:app", "--host", "0.0.0.0", "--port", "8000", "--log-config=uvicorn-log.yml"]
