--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "flask-wtf>=1.2.2",
     "gunicorn>=23.0.0",
     "pyjwt>=2.10.1",
+    "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "sqlalchemy>=2.0.38",
     "uvicorn>=0.34.0",
