--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cachetools>=5.5.2",
     "fastapi>=0.115.8",
     "flask>=3.1.0",
     "flask-cors>=5.0.1",
