--- a/secrets.env.example
+++ b/secrets.env.example
@@ -4,5 +4,12 @@ export REFINANCE_SECRET_KEY=0000-1111-2222-3333-4444-5555
 # telegram bot that will send users a link to login
 export REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
 
-# web ui url
+# web ui url (used for constructing auth links)
 export REFINANCE_UI_URL=http://0.0.0.0:9000
+
+# public api url (needed for deposit provider callbacks)
+export REFINANCE_API_URL=http://refinance.f0rth.space
+
+# cryptapi deposit provider credentials
+export REFINANCE_CRYPTAPI_ADDRESS_ERC20_USDT=0xxxxxxxxxxxxx
+export REFINANCE_CRYPTAPI_ADDRESS_TRC20_USDT=Txxxxxxxxxxxxx
