--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 services:
   api:
-    build: api
+    build:
+      context: .
+      dockerfile: api/Dockerfile
     ports:
       - "8000:8000"
     volumes:
       - api-data:/opt/data
 
   ui:
-    build: ui
+    build: 
+      context: .
+      dockerfile: ui/Dockerfile
     ports:
       - "9000:9000"
 
