add uv cache to dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,7 +6,8 @@ COPY pyproject.toml /opt/api/
 COPY uv.lock /opt/api/
 
 WORKDIR /opt/api
-RUN uv export > requirements.txt && \
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv export > requirements.txt && \
     uv pip install --system -r requirements.txt
 
 EXPOSE 8000
