--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -6,7 +6,8 @@ COPY pyproject.toml /opt/ui/
 COPY uv.lock /opt/ui/
 
 WORKDIR /opt/ui
-RUN uv export > requirements.txt && \
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv export > requirements.txt && \
     uv pip install --system -r requirements.txt
 
 EXPOSE 9000
