--- a/secrets.env.example
+++ b/secrets.env.example
@@ -13,3 +13,9 @@ export REFINANCE_API_URL=http://refinance.f0rth.space
 # cryptapi deposit provider credentials
 export REFINANCE_CRYPTAPI_ADDRESS_ERC20_USDT=0xxxxxxxxxxxxx
 export REFINANCE_CRYPTAPI_ADDRESS_TRC20_USDT=Txxxxxxxxxxxxx
+
+# OIDC (OpenID Connect) provider configuration
+export REFINANCE_OIDC_CLIENT_ID=
+export REFINANCE_OIDC_CLIENT_SECRET=
+export REFINANCE_OIDC_DISCOVERY_URL=
+export REFINANCE_OIDC_REDIRECT_URI=
