--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,8 +2,24 @@ services:
   api:
     env_file:
       - secrets.prod.env
+    depends_on:
+      - db
+    environment:
+      REFINANCE_DATABASE_URL: postgresql://postgres:postgres@db:5432/refinance
   ui:
     env_file:
       - secrets.prod.env
     ports:
       - "80:9000"
+  db:
+    image: postgres:17
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: refinance
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
