--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests>=2.32.3",
     "sqlalchemy>=2.0.38",
     "uvicorn>=0.34.0",
+    "psycopg2-binary>=2.9.7",
 ]
 
 [dependency-groups]
