--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           make ci-test
       - name: Stop and remove containers
         run: |
-          make down
+          make ci-down
 
   docker:
     name: Docker Build
