--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,11 @@ dev = [
     "mypy>=1.15.0",
     "pytest>=8.3.4",
     "ruff>=0.9.7",
+    "pre-commit>=2.22.0",
 ]
+[tool.isort]
+profile = "black"
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
