--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,6 +7,8 @@ services:
       - secrets.dev.env
     ports:
       - "8000:8000"
+    networks:
+      - refinance-network
 
   ui:
     volumes:
@@ -16,4 +18,45 @@ services:
       - secrets.dev.env
     ports:
       - "9000:9000"
+    networks:
+      - refinance-network
 
+  authelia:
+    image: authelia/authelia:latest
+    container_name: authelia
+    volumes:
+      - ./authelia/config:/config
+    ports:
+      - "9091:9091"
+    environment:
+      - TZ=UTC
+      - AUTHELIA_LOG_LEVEL=warn
+    restart: unless-stopped
+    command: ["authelia", "--config", "/config/configuration.yml"]
+    networks:
+      - refinance-network
+
+  proxy:
+    image: nginx:alpine
+    container_name: proxy
+    volumes:
+      - ./authelia/https-localhost-proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./authelia/https-localhost-proxy/certs:/etc/nginx/certs:ro
+    ports:
+      - "443:443"
+      - "80:80"
+    depends_on:
+      - authelia
+      - api
+      - ui
+    restart: unless-stopped
+    networks:
+      refinance-network:
+        aliases:
+          - authelia.localhost.local
+          - app.localhost.local
+          - api.localhost.local
+
+networks:
+  refinance-network:
+    driver: bridge
