--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy>=2.0.38",
     "uvicorn>=0.34.0",
     "psycopg2-binary>=2.9.7",
+    "python-multipart>=0.0.20",
 ]
 
 [dependency-groups]
