--- a/secrets.env.example
+++ b/secrets.env.example
@@ -1,15 +1,21 @@
 # any string to be used as a secret key to sign x-token
-export REFINANCE_SECRET_KEY=0000-1111-2222-3333-4444-5555
+REFINANCE_SECRET_KEY=0000-1111-2222-3333-4444-5555
 
 # telegram bot that will send users a link to login
-export REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
+REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
 
 # web ui url (used for constructing auth links)
-export REFINANCE_UI_URL=http://0.0.0.0:9000
+# dev suggestion: http://localhost:9000
+REFINANCE_UI_URL=http://localhost:9000
 
 # public api url (needed for deposit provider callbacks)
-export REFINANCE_API_URL=http://refinance.f0rth.space
+# dev : http://localhost:8000
+REFINANCE_API_URL=http://refinance.f0rth.space
 
-# cryptapi deposit provider credentials
-export REFINANCE_CRYPTAPI_ADDRESS_ERC20_USDT=0xxxxxxxxxxxxx
-export REFINANCE_CRYPTAPI_ADDRESS_TRC20_USDT=Txxxxxxxxxxxxx
+# cryptapi deposit provider credentials (optional in dev)
+REFINANCE_CRYPTAPI_ADDRESS_ERC20_USDT=0xxxxxxxxxxxxx
+REFINANCE_CRYPTAPI_ADDRESS_TRC20_USDT=Txxxxxxxxxxxxx
+
+# optional: override database (if not set, app uses SQLite in dev)
+# example for Postgres: postgresql://postgres:postgres@db:5432/refinance
+# REFINANCE_DATABASE_URL=postgresql://postgres:postgres@db:5432/refinance
