remove sqlite, leave only postgres

--- a/secrets.env.example
+++ b/secrets.env.example
@@ -16,6 +16,5 @@ REFINANCE_API_URL=http://refinance.f0rth.space
 REFINANCE_CRYPTAPI_ADDRESS_ERC20_USDT=0xxxxxxxxxxxxx
 REFINANCE_CRYPTAPI_ADDRESS_TRC20_USDT=Txxxxxxxxxxxxx
 
-# optional: override database (if not set, app uses SQLite in dev)
-# example for Postgres: postgresql://postgres:postgres@db:5432/refinance
-# REFINANCE_DATABASE_URL=postgresql://postgres:postgres@db:5432/refinance
+# database connection (defaults to Postgres service named "db")
+REFINANCE_DATABASE_URL=postgresql://postgres:postgres@db:5432/refinance
