--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,7 +2,16 @@ services:
   api:
     env_file:
       - secrets.env.example
+    depends_on:
+      - db
 
   ui:
     env_file:
       - secrets.env.example
+
+  db:
+    image: postgres:17
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: refinance
