--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
     command: --reload
     env_file:
       - secrets.dev.env
+    depends_on:
+      - db
     ports:
       - "8000:8000"
 
@@ -16,4 +18,19 @@ services:
       - secrets.dev.env
     ports:
       - "9000:9000"
+
+  db:
+    image: postgres:17
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: refinance
+    ports:
+      - "5432:5432"
+    volumes:
+      - db-dev-data:/var/lib/postgresql/data
+
+volumes:
+  db-dev-data:
 
