--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,29 +10,23 @@ permissions:
   contents: read
 
 jobs:
-  lint:
-    name: Lint
+  tests:
+    name: Run API Tests
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Build and Run Docker Compose
+      - name: make ci
         run: |
-          make ci-daemon
-      - name: Run pytest
-        run: |
-          make ci-test
-      - name: Stop and remove containers
-        run: |
-          make ci-down
+          make ci
 
   docker:
     name: Docker Build
     runs-on: ubuntu-latest
 
-    needs: lint
+    needs: tests
 
     permissions:
       contents: read
