fix auth cookie

--- a/secrets.env.example
+++ b/secrets.env.example
@@ -8,6 +8,9 @@ REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
 # dev suggestion: http://localhost:9000
 REFINANCE_UI_URL=http://localhost:9000
 
+# web ui secret key for Flask session signing
+REFINANCE_UI_SECRET_KEY=change-me
+
 # public api url (needed for deposit provider callbacks)
 # dev : http://localhost:8000
 REFINANCE_API_URL=http://refinance.f0rth.space
