huge redesign, menu fixes, ui simplification

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,8 @@ services:
     command: --reload
     env_file:
       - secrets.dev.env
+    depends_on:
+      - api
     ports:
       - "9000:9000"
 
