--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -11,4 +11,4 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     uv pip install --system -r requirements.txt
 
 EXPOSE 9000
-ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:9000", "app.app:app"]
+ENTRYPOINT ["gunicorn","--bind","0.0.0.0:9000","--worker-class","gthread","--workers","2","--threads","4","--timeout","120","--graceful-timeout","30","--keep-alive","5","app.app:app"]
