--- a/secrets.env.example
+++ b/secrets.env.example
@@ -1,6 +1,9 @@
 # any string to be used as a secret key to sign x-token
 REFINANCE_SECRET_KEY=0000-1111-2222-3333-4444-5555
 
+# secret used to authorize POS endpoints (x-pos-secret header)
+REFINANCE_POS_SECRET=change-me-pos-secret
+
 # telegram bot that will send users a link to login
 REFINANCE_TELEGRAM_BOT_API_TOKEN=0000000:abcdef0123456789
 
